Update Encoding.java